LPS-87506 Remove mention of 6.2 issue