@@ -15,9 +15,7 @@ Liferay DXP requires a Java JDK 8 or 11 and requires specific JVM option setting
 | Four-digit Years | `-Djava.locale.providers=JRE,COMPAT,CLDR` | No | On JDK 11, this setting displays four-digit years. Since JDK 9, the Unicode Common Locale Data Repository (CLDR) is the default locales provider. CLDR does not provide years in a four-digit format (see [LPS-87191](https://issues.liferay.com/browse/LPS-87191)). This setting works around the issue by using JDK 8's default locales provider. |
 | Heap Size | `-Xms2560m -Xmx2560m` | No | The recommended maximum heap size is 2GB. Setting the minimum heap size to the maximum heap size value minimizes garbage collections. |
 
-## Known Issue Workarounds
-
-### Illegal Access Warnings
+## Known Issue: Illegal Access Warnings
 
 On JDK 11, _Illegal Access_ warnings like these may print to your logs:
 
@@ -43,26 +41,6 @@ These warnings are caused by a known issue ([LPS-87421](https://issues.liferay.c
 --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
 --add-opens=java.rmi/sun.rmi.transport=ALL-UNNAMED
 --add-opens=java.xml/com.sun.org.apache.xerces.internal.parsers=ALL-UNNAMED
-```
-
-### Unable to Determine Server Capabilities
-
-If you're on Linux/UNIX and starting Liferay DXP on JDK 11 using an LCS 5.0.0 client, the following error may occur:
-
-```message
-ERROR [LCS Worker 2][BaseScheduledTask:92] java.lang.reflect.InaccessibleObjectException: Unable to make public long com.sun.management.internal.OperatingSystemImpl.getOpenFileDescriptorCount() accessible: module jdk.management does not
- "opens com.sun.management.internal" to unnamed module @1a3325e5
-java.lang.reflect.InaccessibleObjectException: Unable to make public long com.sun.management.internal.OperatingSystemImpl.getOpenFileDescriptorCount() accessible: module jdk.management does not "opens com.sun.management.internal" to unnamed module @1a3325e5
-at java.base/java.lang.reflect.AccessibleObject.checkCanSetAccessible(AccessibleObject.java:
-at java.base/java.lang.reflect.AccessibleObject.checkCanSetAccessible(AccessibleObject.java:
-at java.base/java.lang.reflect.Method.checkCanSetAccessible(Method.java:198)
-at java.base/java.lang.reflect.Method.setAccessible(Method.java:192)
-```
-
-This error is caused by a known issue ([LPS-87506](https://issues.liferay.com/browse/LPS-87506)) and can be resolved by adding this JVM option:
-
-```properties
---add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED
 ```
 
 ## Example Tomcat Script
